Thu Oct 14 22:14:23 1999  Richard Henderson  <rth@cygnus.com>

	* i386.md (movstricthi_1): Allow r/r.

Thu Oct 14 19:44:08 1999  Jan Hubicka  <hubicka@freesoft.cz>

	* fold-const.c (fold): Move bit_rotate code to the EXPR_PLUS case,
	falltrought to assocate code.
	Convert XOR to OR in code like (a&c1)^(a&c2) where c1 and c2 don't have
	bits in common.

	* combine.c (simplify_logical): Convert XOR to IOR if operands have
	no bits in common; remove XOR to ROTATE conversion.

Fri Oct 15 17:40:11 1999  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>

	* config/c4x/c4x.h (c4x_va_start, c4x_va_arg): Declare.

Fri Oct 15 17:27:17 1999  Michael Hayes  <m.hayes@elec.canterbury.ac.nz>

	* config/c4x/c4x.c (dst_operand): New.
	(PREDICATE_CODES): Update.
	* config/c4x/c4x.h (dst_operand): Declare it.
	* config/c4x/c4x.md:  Define mode for each unspec usage.
	(move patterns):  Use dst_operand predicate instead of src_operand.
	(movqi_update, movqf_update): Delete.

Thu Oct 14 18:48:54 1999  Richard Henderson  <rth@cygnus.com>

	* recog.c (pmode_register_operand): New.
	* recog.h: Declare it.
	* genrecog.c (pred_codes): Likewise.
	(special_mode_pred_table): Likewise.
	(validate_pattern): Don't warn no mode for address_operand.

	* print-rtl.c (print_rtx) [LABEL_REF]: Only do full subexpression
	if the operand is not insn-like.

Thu Oct 14 19:38:42 1999  Jeffrey A Law  (law@cygnus.com)
			  Sylvian Pion <Sylvain.Pion@sophia.inria.fr>

	* fold-const.c (fold): Handle more simplifications allowed by IEEE.

Thu Oct 14 17:30:14 1999  Richard Henderson  <rth@cygnus.com>

	* sparc.md (*): Use {nonimmediate,register}_operand as appropriate
	instead of general_operand in a SET_DEST.  Use const_double_operand
	instead of an explicit test against CONST_DOUBLE.
	(movsf_const_lo): Add missing register mode.
	(goto_handler_and_restore): Add auxiliary test for Pmode.
	(flush): Adjust to use address_operand.
	(return_sf_no_fpu): Add missing output constraint.
